# lilac

./: .gitignore  Cargo.toml  README.md
_lilac/: settings.toml
example/: index.html  test.html
example/_lilac/: settings.toml
examples/: simple.rs  text.rs  window.rs
src/: args.rs  broadcaster.rs  build.rs  draw.rs  exit.rs  init.rs  lib.rs  main.rs  run.rs  settings.rs
src/commands/: build.rs  init.rs  mod.rs  run.rs
src/compiler/: lexer.rs  mod.rs  parser.rs  visualize.rs
src/draw/: mod.rs  sprite.rs
src/styles/: button.rs  mod.rs  stylizer.rs
src/styles/serenity/: border.rs  button.rs  mod.rs  theme.rs
src/widget/: button.rs  mod.rs  stylizer.rs
test/: index.html  test_cases.txt  test_simple.txt
test/_lilac/: settings.toml
test/path/to/: file.txt
test/path/to/files/: 1.txt  2.txt  3.txt  4.txt
test/scripts/: printSomething.sh
test_cases/: rss_test.txt
test_site/: args.txt  index.html  recursive_put.txt  test.html  test_simple.txt  test_subsec.txt
test_site/_lilac/: settings.toml
test_site/path/to/files/: 1.txt  2.txt
