[package]
name = "lilac"
version = "0.1.0"
edition = "2021"
description = "Static site generator-esque tool for adding include statements to HTML"
license = "MIT"

[dependencies]
clap = {version = "4.4.17", features = ["derive"]}
toml = "0.8.8"
serde = {version = "1.0.195", features = ["derive"]}
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"